y.output
Terminals unused in grammar

   FUNCTION
   IF
   ELSE
   ELSEIF
   WHILE
   FOR
   RETURN_T
   BREAK
   CONTINUE
   NULL_T
   LP
   RP
   LC
   RC
   SEMICOLON
   COMMA
   ASSIGN
   LOGICAL_AND
   LOGICAL_OR
   EQ
   NE
   GT
   GE
   LT
   LE
   MOD
   TRUE_T
   FALSE_T
   GLOBAL_T


State 5 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce


Grammar

    0 $accept: line_list $end

    1 line_list: line
    2          | line_list line

    3 line: expression

    4 expression: term
    5           | expression ADD term
    6           | expression SUB term

    7 term: primary_expression
    8     | term MUL primary_expression
    9     | term DIV primary_expression

   10 primary_expression: DIV


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258)
IF (259)
ELSE (260)
ELSEIF (261)
WHILE (262)
FOR (263)
RETURN_T (264)
BREAK (265)
CONTINUE (266)
NULL_T (267)
LP (268)
RP (269)
LC (270)
RC (271)
SEMICOLON (272)
COMMA (273)
ASSIGN (274)
LOGICAL_AND (275)
LOGICAL_OR (276)
EQ (277)
NE (278)
GT (279)
GE (280)
LT (281)
LE (282)
ADD (283) 5
SUB (284) 6
MUL (285) 8
DIV (286) 9 10
MOD (287)
TRUE_T (288)
FALSE_T (289)
GLOBAL_T (290)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
line_list (37)
    on left: 1 2, on right: 0 2
line (38)
    on left: 3, on right: 1 2
expression (39)
    on left: 4 5 6, on right: 3 5 6
term (40)
    on left: 7 8 9, on right: 4 5 6 8 9
primary_expression (41)
    on left: 10, on right: 7 8 9


state 0

    0 $accept: . line_list $end

    DIV  shift, and go to state 1

    line_list           go to state 2
    line                go to state 3
    expression          go to state 4
    term                go to state 5
    primary_expression  go to state 6


state 1

   10 primary_expression: DIV .

    $default  reduce using rule 10 (primary_expression)


state 2

    0 $accept: line_list . $end
    2 line_list: line_list . line

    $end  shift, and go to state 7
    DIV   shift, and go to state 1

    line                go to state 8
    expression          go to state 4
    term                go to state 5
    primary_expression  go to state 6


state 3

    1 line_list: line .

    $default  reduce using rule 1 (line_list)


state 4

    3 line: expression .
    5 expression: expression . ADD term
    6           | expression . SUB term

    ADD  shift, and go to state 9
    SUB  shift, and go to state 10

    $default  reduce using rule 3 (line)


state 5

    4 expression: term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 11
    DIV  shift, and go to state 12

    DIV       [reduce using rule 4 (expression)]
    $default  reduce using rule 4 (expression)


state 6

    7 term: primary_expression .

    $default  reduce using rule 7 (term)


state 7

    0 $accept: line_list $end .

    $default  accept


state 8

    2 line_list: line_list line .

    $default  reduce using rule 2 (line_list)


state 9

    5 expression: expression ADD . term

    DIV  shift, and go to state 1

    term                go to state 13
    primary_expression  go to state 6


state 10

    6 expression: expression SUB . term

    DIV  shift, and go to state 1

    term                go to state 14
    primary_expression  go to state 6


state 11

    8 term: term MUL . primary_expression

    DIV  shift, and go to state 1

    primary_expression  go to state 15


state 12

    9 term: term DIV . primary_expression

    DIV  shift, and go to state 1

    primary_expression  go to state 16


state 13

    5 expression: expression ADD term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 11
    DIV  shift, and go to state 12

    DIV       [reduce using rule 5 (expression)]
    $default  reduce using rule 5 (expression)


state 14

    6 expression: expression SUB term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 11
    DIV  shift, and go to state 12

    DIV       [reduce using rule 6 (expression)]
    $default  reduce using rule 6 (expression)


state 15

    8 term: term MUL primary_expression .

    $default  reduce using rule 8 (term)


state 16

    9 term: term DIV primary_expression .

    $default  reduce using rule 9 (term)
